src/test/deca/syntax/valid/SansObjet/PrimaryExpr7-Cast-FloatToInt.deca
// Description:
//    Illegal cast expression: int to float.
//
// Results:
//    (void)
//
// Historique:
//    cree le 13/01/2022

{
        int x = (int)(3.4);
}
