src/test/deca/syntax/invalid/SansObjet/PrimaryExpr7-Cast-IntToFloat.deca
// Description:
//    Legal cast expression: int to float.
//
// Results:
//    11:18: (RULE 3.39) Illegal cast.
//
// Historique:
//    cree le 13/01/2022

{
        float x = (float)(2);
}
